--- a/code/site/src/css/style.css
+++ b/code/site/src/css/style.css
@@ -5263,6 +5263,7 @@ ul {
   padding-bottom: 25px;
   border-bottom: 1px solid #405266;
   margin-bottom: 25px;
+  padding-right: 15px;
 }
 
 .movie-item-style-2 .mv-item-infor .run-time span {
