--- a/code/site/src/css/style.css
+++ b/code/site/src/css/style.css
@@ -7762,7 +7762,8 @@ ul {
 }
 
 .form-style-1 input,
-.form-style-1 select {
+.form-style-1 select,
+.form-style-1 textarea {
   font-family: 'Nunito', sans-serif;
   font-size: 12px;
   color: #abb7c4;
@@ -7776,7 +7777,14 @@ ul {
   height: 40px;
 }
 
-.form-style-1 input::-webkit-input-placeholder {
+.form-style-1 textarea {
+  height: 200px;
+  resize: none !important;
+}
+
+
+.form-style-1 input::-webkit-input-placeholder,
+.form-style-1 textarea::-webkit-input-placeholder {
   color: #abb7c4;
 }
 
@@ -10009,4 +10017,42 @@ footer.full-width-ft .ft-copyright {
   visibility: hidden;
   font-weight: bold;
   color: red !important;
+}
+
+#toast-container {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #233a50;
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 9999;
+  font-family: 'Dosis', sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#toast-container.show {
+  opacity: 1;
+}
+
+.icon-circle {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  background-color: transparent;
+  margin-left: 8px;
+}
+
+.icon-circle i {
+  color: #fff;
 }
