--- a/code/site/src/css/style.css
+++ b/code/site/src/css/style.css
@@ -9596,6 +9596,17 @@ header .top-search input {
   text-transform: none;
 }
 
+header .top-search .search-icon {
+  background: url('../images/uploads/topsearch.png') no-repeat center;
+  height: 46px;
+  width: 46px;
+  border: none;
+  background-color: #233a50 !important;
+  color: #abb7c4;
+  cursor: pointer;
+  padding-right: 10px;
+}
+
 header .top-search select {
   width: 20%;
   border-right: 1px solid #020d18;
@@ -9609,10 +9620,6 @@ header .top-search select {
 
 header .top-search input::-webkit-input-placeholder {
   color: #abb7c4;
-}
-
-header .top-search input {
-  background: url('../images/uploads/topsearch.png') no-repeat right 20px center;
 }
 
 header #nav-icon1 {
