--- a/code/admin/src/css/theme.css
+++ b/code/admin/src/css/theme.css
@@ -4301,12 +4301,12 @@ section {
 
 .table-striped tbody tr:nth-of-type(odd) {
     background-color: #fff;
-    color: #000;
+    color: #000 !important;
 }
 
 .table-striped tbody tr:nth-of-type(even) {
     background-color: #335576;
-    color: #fff;
+    color: #fff !important;
 }
 
 .table-top-countries tbody td {
@@ -14702,4 +14702,62 @@ tr .non-tronca {
 .vue-lists ul,
 .vue-lists ol {
     padding-left: 30px;
+}
+
+
+.page .page-last {
+    cursor: pointer;
+}
+
+.page::after {
+    cursor: pointer;
+    content: ' -';
+}
+
+.page-last::before .page::before {
+    cursor: pointer;
+    content: ' ';
+}
+
+.container {
+    width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+select {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+#selectedOptions {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+.option {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    margin: 5px;
+    background-color: #007BFF;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.remove {
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.divider {
+    height: 1px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    background: white;
 }
