--- a/code/admin/src/css/theme.css
+++ b/code/admin/src/css/theme.css
@@ -5351,7 +5351,7 @@ tr .non-tronca {
     font-size: 10px;
     font-weight: 600;
     text-transform: uppercase;
-    background-color: #fff;
+    background-color: #868e96;
     border: 1px solid #f2f2f2;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
