--- a/code/site/src/css/plugins.css
+++ b/code/site/src/css/plugins.css
@@ -11647,7 +11647,8 @@
   left: 0;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  z-index: 8020;
+  /*z-index: 8020;*/
+  z-index: 2147483647;
 }
 
 .fancybox-skin {
