--- a/code/admin/src/css/theme.css
+++ b/code/admin/src/css/theme.css
@@ -14765,3 +14765,44 @@ select {
 img {
     border-radius: 5px;
 }
+
+.error {
+    font-family: 'Dosis', sans-serif;
+    text-align: center;
+    font-size: 14px;
+    text-transform: uppercase;
+    visibility: hidden;
+    font-weight: bold;
+    color: red !important;
+}
+
+#toast-container {
+    position: fixed;
+    bottom: 20px;
+    left: 60%;
+    transform: translateX(-50%);
+    background-color: #233a50;
+    padding: 12px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 9999;
+    font-family: 'Dosis', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.success {
+    border: 2px solid #12E601;
+    color: #12E601;
+}
+
+.error {
+    border: 2px solid red;
+    color: red;
+}
+
+#toast-container.show {
+    opacity: 1;
+}
